--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@emotion/is-prop-valid": "^1.2.1",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
-    "json-serve": "^0.1.0",
+    "hex-to-rgba": "^2.0.1",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "nanoid": "^5.0.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
